@@ -3,7 +3,7 @@ SUBDIRS = icons pics
 noinst_LTLIBRARIES = libui.la
 
 libui_la_SOURCES = droptarget.cpp groupspanel.cpp mainview.cpp panelsmanager.cpp \
-                   splash.cpp testview.cpp tray.cpp traytransfer.cpp
+                   splash.cpp testview.cpp tray.cpp traytransfer.cpp sidebar.cpp
 
 libui_la_LIBADD = $(LIB_KUTILS)
 
