@@ -1,3 +1,6 @@
+2005-01-15 Dario Massarin <nekkar@libero.it>
+        * Initial implementation of a new sidebar.
+
 2005-01-14 Dario Massarin <nekkar@libero.it>
         * Improve the progressbar look&feel
 
